# rentalx/src/modules/cars/useCases/listAvailableCars/ListAvailableCarsController.ts
@@ -1,0 +1,23 @@
+import { ListAvailableCarsUseCase } from '@modules/cars/useCases/listAvailableCars/ListAvailableCarsUseCase';
+import { Request, Response } from 'express';
+import { container } from 'tsyringe';
+
+class ListAvailableCarsController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { brand, name, category_id } = request.query;
+
+    const listAvailableCarsUseCase = container.resolve(
+      ListAvailableCarsUseCase,
+    );
+
+    const cars = await listAvailableCarsUseCase.execute({
+      brand: brand as string,
+      name: name as string,
+      category_id: category_id as string,
+    });
+
+    return response.json(cars);
+  }
+}
+
+export { ListAvailableCarsController };
