# rentalx/src/shared/infra/http/routes/cars.routes.ts
@@ -1,0 +1,30 @@
+import { CreateCarController } from '@modules/cars/useCases/createCar/CreateCarController';
+import { CreateCarSpecificationController } from '@modules/cars/useCases/createCarSpecification/CreateCarSpecificationController';
+import { ListAvailableCarsController } from '@modules/cars/useCases/listAvailableCars/ListAvailableCarsController';
+import { ensureAdmin } from '@shared/infra/http/middleware/ensureAdmin';
+import { ensureAuthenticated } from '@shared/infra/http/middleware/ensureAuthenticated';
+import { Router } from 'express';
+
+const carsRoutes = Router();
+
+const createCarController = new CreateCarController();
+const listAvailableCarsController = new ListAvailableCarsController();
+const createCarSpecificationController = new CreateCarSpecificationController();
+
+carsRoutes.post(
+  '/',
+  ensureAuthenticated,
+  ensureAdmin,
+  createCarController.handle,
+);
+
+carsRoutes.get('/available', listAvailableCarsController.handle);
+
+carsRoutes.post(
+  '/specifications/:id',
+  ensureAuthenticated,
+  ensureAdmin,
+  createCarSpecificationController.handle,
+);
+
+export { carsRoutes };
