# rentalx/src/shared/infra/http/routes/index.ts
@@ -1,4 +1,5 @@
 import { authenticateRoutes } from '@shared/infra/http/routes/authenticate.routes';
+import { carsRoutes } from '@shared/infra/http/routes/cars.routes';
 import { categoriesRoutes } from '@shared/infra/http/routes/categories.routes';
 import { specificationsRoutes } from '@shared/infra/http/routes/specifications.routes';
 import { usersRoutes } from '@shared/infra/http/routes/users.routes';
@@ -9,6 +10,7 @@ const router = Router();
 router.use('/categories', categoriesRoutes);
 router.use('/specifications', specificationsRoutes);
 router.use('/users', usersRoutes);
+router.use('/cars', carsRoutes);
 router.use(authenticateRoutes);
 
 export { router };
